# strata

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  docker-compose.observability.yml  docker-compose.service.yml  docker-compose.test.yml  docker-compose.yml  fly.toml  index.html  mkdocs.yml  mockup-mounts-workers.html  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json  setup.sh  start.sh
.docker/service-mode/: nginx.conf  pyproject.toml
.github/workflows/: ci.yml  docker.yml  docs.yml  integration.yml  pre-commit.yml
benchmarks/: bench_hot_path.py  bench_restart.py  capacity_sweep.py  prod_sim_local.py  soak_test.py  stress_test.py
deployment/codespaces/: index.html
deployment/docker/: index.html
deployment/fly/: index.html
deployment/modes/: index.html
docs/: core-quickstart.md  design-ai-integration.md  design-notebook-display-outputs.md  design-notebook-environments.md  design-notebook.md  design-remote-io-and-workers.md  design-status.md  fly-notebook-smoke-checklist.md  implementation-plan.md  index.md  mockup.html  notebook-module-export-manual-test.md  notebook-quickstart.md  service-mode-deployment.md
docs/deployment/: codespaces.md  docker.md  fly.md  modes.md
docs/design/: unified-materialize-api.md
docs/getting-started/: core.md  installation.md  notebook.md
docs/internal/: PERFORMANCE.md  design-ai-integration.md  design-notebook-display-outputs.md  design-notebook-environments.md  design-notebook.md  design-remote-io-and-workers.md  design-status.md  design-worker-deployment.md  hosted-service-plan.md  implementation-plan.md  yc-polish-plan.md
docs/notebook/: annotations.md  cells.md  cli.md  concepts.md  environment.md  keyboard.md  llm.md  secrets.md  workers.md
docs/reference/: configuration.md  rest-api.md  websocket.md
examples/: 01_basic_usage.py  02_column_projection.py  03_filtering.py  04_time_travel.py  05_duckdb_integration.py  06_cache_management.py  07_error_handling.py  08_polars_integration.py  09_s3_storage.py  10_artifacts.py  11_async_client.py  12_delibera_integration.py  README.md  hello_world.py  setup_demo.py
examples/arxiv_classifier/: .gitignore  MODAL_DEPLOY.md  README.md  modal_gpu_worker.py  notebook.toml  pyproject.toml  run_local_workers.sh
examples/arxiv_classifier/cells/: aggregate.py  clusters.py  embed.py  evaluate.py  load.py  plot.py  sample.py  themes.py  train.py
examples/arxiv_classifier/df-cluster/: Dockerfile  fly.toml
examples/demo_notebook/: notebook.toml  pyproject.toml
examples/iris_classification/: README.md  notebook.toml  pyproject.toml
examples/iris_classification/cells/: confusion.py  evaluate.py  explore_stats.py  load_data.py  scatter_plot.py  train_model.py  train_test.py
examples/library_cells/: README.md  notebook.toml  pyproject.toml
examples/library_cells/cells/: blocked.py  intro.md  limits.md  mixed_intro.md  mixed_lib.py  pure_lib.py  try_blocked.py  typed_intro.md  typed_lib.py  use_mixed.py  use_pure.py  use_typed.py
examples/loop_hill_climb/: README.md  notebook.toml  pyproject.toml
examples/markdown_showcase/: notebook.toml  pyproject.toml
examples/markdown_showcase/cells/: blockquotes.md  code_blocks.md  dynamic_md.py  emphasis.md  headings.md  intro.md  links.md  lists.md  security.md  tables.md  templated_md.py
examples/news_alpha_trader/: README.md  notebook.toml  pyproject.toml  trading.db
examples/news_alpha_trader/cells/: costs.py  daily_note.py  disclaimer.md  disclaimer.py  extract_signals.py  fetch_news.py  fetch_prices.py  helpers.py  persist_signals.py  place_orders.py  pnl_report.py  reconcile.py  risk_check.py
examples/pandas_basics/: README.md  notebook.toml  pyproject.toml
examples/review_triage/: README.md  notebook.toml  pyproject.toml
examples/s3_mount/: README.md  notebook.toml  pyproject.toml
examples/s3_mount/cells/: load.py  summary.py
examples/sql_orders_report/: README.md  notebook.toml  pyproject.toml
examples/sql_orders_report/cells/: category_summary.py  report.py  seed_database.py  setup.py  threshold.py  top_orders.py
examples/titanic_ml/: README.md  notebook.toml  pyproject.toml
experiments/circle_packing_26/: README.md
experiments/heilbronn_17/: README.md
experiments/heilbronn_17/baseline_gp/: notebook.toml  pyproject.toml
experiments/heilbronn_17/baseline_gp/cells/: evolve.py  harness.py  problem.md  report.py  seed.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: bench-notebook-flows.mjs
frontend/src/: App.vue  router.ts  style.css
getting-started/core/: index.html
getting-started/installation/: index.html
getting-started/notebook/: index.html
grafana/: strata-dashboard.json
notebook/annotations/: index.html
notebook/cells/: index.html
notebook/cli/: index.html
notebook/concepts/: index.html
notebook/environment/: index.html
notebook/keyboard/: index.html
notebook/llm/: index.html
observability/: prometheus.yml
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: integration_test.py  service_mode_smoke.py
search/: search_index.json
src/strata/: __init__.py  (+37 more)
tests/: __init__.py  conftest.py  test_adaptive_concurrency.py  test_arrow_integration.py  test_artifact_store.py  test_artifacts_integration.py  test_async_client.py  test_auth.py  test_blob_store.py  test_build_observability.py  test_build_qos.py  test_build_runner.py  test_build_store.py  test_cache_granularity.py  test_cache_metrics.py  test_cache_optimized.py  test_cache_stats.py  test_cache_warming.py  test_circuit_breaker.py  test_datafusion_integration.py  test_deployment_mode.py  test_duckdb_ext.py  test_e2e_artifacts.py  test_executor_protocol.py  test_executors.py  test_fast_io.py  test_filters.py  test_hardening.py  test_health.py  test_lineage.py  test_logging.py  test_metadata_cache.py  test_multitenancy.py  test_observability.py  test_pandas_integration.py  test_parallel_fetch.py  test_polars_ext.py  test_prefetch.py  test_pull_model.py  test_put_json.py  (+17 more)
(+250 files in other folders)
