[project]
name = "strata"
version = "0.1.0"
description = "Persistence substrate and notebook runtime for long-horizon computation"
readme = "README.md"
authors = [
    { name = "Fangchen Li", email = "fangchen.li@outlook.com" }
]
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = ["iceberg", "arrow", "cache", "analytics", "duckdb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
]
dependencies = [
    "pyiceberg[sql-sqlite,sql-postgres]>=0.8.0",
    "pyarrow>=18.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=13.0",
    "httpx>=0.28.0",
    "duckdb>=1.1.0",
    "python-multipart>=0.0.9", # Required for executor multipart form handling
    "pydantic>=2.0.0", # For configuration validation
    "pydantic-settings>=2.0.0", # For configuration with env var support
    "tomli_w>=1.0.0", # For writing TOML files
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
# OpenTelemetry for distributed tracing
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
]
# Azure Blob Storage support
azure = [
    "azure-storage-blob>=12.20.0",
    "azure-identity>=1.15.0",
]
# Strata Notebook runtime — DataFrame / Series / ndarray
# serialization, display outputs (figures, images), and the
# cloudpickle-backed object codec used for cell output values.
# Strata core doesn't need any of these; install this extra only if
# you use the notebook server or workers.
# Notebook cell execution runtime: harness + pool_worker + serializer.
# orjson is used for manifest I/O in the harness/pool_worker subprocesses.
# cloudpickle is the default object codec for cell outputs.
notebook = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "orjson>=3.10.0",
    "cloudpickle>=3.0.0",
    "matplotlib>=3.8.0",
    "Pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "moto[s3]>=5.0.0",
    "boto3>=1.35.0",
    "psutil>=5.9.0",
    "testcontainers[minio]>=4.0.0",
    "polars>=1.36.1",
    "pandas>=2.3.3",
    "datafusion>=50.1.0",
    "ty>=0.0.24",
    "s3fs>=2026.3.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
strata = "strata.cli:main"
strata-server = "strata.server:main"
strata-worker = "strata.notebook.remote_executor:main"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.uv]
python-preference = "only-managed"

# Maturin configuration for building the Rust extension
# Build with: maturin develop (dev) or maturin build (release)
[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "src"
module-name = "strata._strata_core"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["examples/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.environment]
python-version = "3.12"
python = ".venv"

[tool.ty.rules]
# Optional deps (azure, otel, rust ext) use guarded imports
unresolved-import = "warn"
# Dict literal narrowing false positives
invalid-assignment = "warn"
# Generic[P] deliberate use, asyncio.Process.stdin/stdout nullability
invalid-method-override = "warn"

# Per-file overrides for remaining warnings that need deeper refactoring
[[tool.ty.overrides]]
include = ["src/strata/transforms/runner.py"]
[tool.ty.overrides.rules]
unknown-argument = "warn"
missing-argument = "warn"

[[tool.ty.overrides]]
include = ["src/strata/integration/polars.py"]
[tool.ty.overrides.rules]
invalid-return-type = "warn"

[[tool.ty.overrides]]
include = ["src/strata/logging.py"]
[tool.ty.overrides.rules]
unresolved-attribute = "warn"
invalid-argument-type = "warn"
no-matching-overload = "warn"

[[tool.ty.overrides]]
include = ["src/strata/transforms/reference_executor.py"]
[tool.ty.overrides.rules]
unresolved-attribute = "warn"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external services",
    "warm_pool: marks tests that require live warm worker startup",
]
