[package]
name = "strata_core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Rust acceleration for Strata's data plane"

[lib]
name = "strata_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
arrow = { version = "57", features = ["ipc"] }
memmap2 = "0.9"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
