[project]
name = "s3-mount-example"
version = "0.1.0"
description = "Read a public S3 bucket through a notebook mount"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=18.0.0",
    "orjson>=3.10.0",
    "cloudpickle>=3.0.0",
    "pandas>=2.0.0",
    "fsspec>=2024.9.0",
    "s3fs>=2024.9.0",
]

[tool.uv]
