[project]
name = "sql-orders-report"
version = "0.1.0"
description = "SQL cells against a local SQLite warehouse, with binds and cache policies"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=18.0.0",
    "orjson>=3.10.0",
    "cloudpickle>=3.0.0",
    "pandas>=2.0.0",
    "adbc-driver-manager>=1.1.0",
    "adbc-driver-sqlite>=1.1.0",
]

[tool.uv]
